examples/live-kubernetes/testpod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-1
  namespace: test-namespace
spec:
  serviceAccount: test-service-account
  containers:
    - name: test-container-1
      image: nginx
      ports:
       - containerPort: 8080
      resources:
        limits:
          cpu: "200m"
          memory: "200Mi"
        requests:
          cpu: "100m"
          memory: "100Mi"
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
    runAsGroup: 1000
    fsGroup: 1000
    seccompProfile:
      type: RuntimeDefault
    capabilities:
      add:
        - NET_BIND_SERVICE
      drop:
        - ALL
